--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,9 +12,12 @@
  *= require_tree .
 */
 body {
-  background-color: #4B7399;
-  font-family: Verdana, Helvetica, Arial;
-  font-size: 14px;
+  margin: 0px;
+  padding: 0px;
+  background: #C0DEED url(/assets/bg-clouds.png) top left repeat-x;
+  font-family: Lucida, Grande, sans-serif;
+  font-size: 0.75em;
+  color: #333333;
 }
 
 a img {
@@ -22,22 +25,71 @@ a img {
 }
 
 a {
-  color: #0000FF;
+  color: #2276bb;
+  text-decoration: none;
+  font-weight: bold;
 }
-
 .clear {
   clear: both;
   height: 0;
   overflow: hidden;
 }
+#header {
+  width: 815px;
+  margin: 15px auto 0px auto;
+}
+
+#header #logo {
+  float: left;
+  width: 400px;
+}
+
+#header #top_links_container {
+  float: right;
+  width: auto;
+  background-color: #FFF;
+  padding: 10px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  margin-right: 30px;
+  margin-top: 50px;
+}
 
 #container {
-  width: 75%;
-  margin: 0 auto;
+  width: 715px;
+  margin: 25px auto 25px auto;
   background-color: #FFF;
-  padding: 20px 40px;
-  border: solid 1px black;
-  margin-top: 20px;
+  padding: 20px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+}
+
+#main {
+  width: 540px;
+  float: left;
+}
+
+#side {
+  width: 160px;
+  float: right;
+}
+
+#my_info_container {}
+#my_info_container img {
+  float: left;
+}
+#my_info_container .contents {
+  font-family: Helvetica Neue, Helvetica,sans-serif;
+  font-weight: bold;
+  color: #333333;
+  float: left;
+  padding-left: 5px;
+  font-size: 13px;
+  line-height: 14px;
+}
+#my_info_container .contents .small {
+  font-size: 12px;
+  font-weight: normal;
 }
 
 #flash_notice, #flash_error, #flash_alert {
@@ -85,4 +137,150 @@ a {
 
 .error_messages ul {
   margin: 0;
+}
+
+input.button {
+  background: url(/assets/round-btn.gif) top left no-repeat;
+  width: 115px;
+  height: 32px;
+  border: 0px;
+  font-size: 120%;
+  color: #666;
+}
+
+/* FLITS FORM*/
+ #new_flit_form {
+  width: 521px;
+  margin-bottom: 25px;
+ }
+ 
+ #new_flit_form textarea {
+  width: 521px;
+  height: 44px;
+ }
+ 
+#new_flit_form h3{
+  font-weight: normal;
+  font-size: 150%;
+  margin: 0px;
+  padding: 0px 0px 5px 0px;
+ }
+
+#new_flit_form #latest_message {
+  color: #666;
+  font-size: 90%;
+  padding-top: 3px;
+  float: left;
+  width: 360px;
+  overflow:hidden;
+  word-wrap:break-word;
+}
+#new_flit_form #submit_button_container{
+  float: right;
+  width: 160px;
+  text-align: right;
+  padding-top: 3px;
+}
+
+ /* FLITS LIST*/
+ #flits_list{
+  margin: 0px;
+  padding: 0px;
+  width: 521px;
+}
+#flits_list li{
+  list-style: none;
+  padding: 10px 0px;
+  margin: 0px;
+  background-color: #fff;
+  border-bottom: 1px dashed #D2DADA;
+}
+#flits_list li.first{
+  border-top: 1px dashed #D2DADA;
+}
+#flits_list li:hover{
+  background-color: #F7F7F7;
+}
+#flits_list li img{
+  float: left;
+}
+#flits_list li div.flit_message_container {
+  float: left;
+  margin-left: 10px;
+  width: 450px;
+  overflow:hidden;
+  word-wrap:break-word;
+
+}
+#flits_list li div.flit_message_container h3 {
+  margin: 0px;
+  font-size: 16px;
+}
+#flits_list li div.button_container {
+  width: 135px;
+  text-align: right;
+  float: right;
+}
+#flits_list li div.flit_message_container a {
+  color: #2276bb;
+  text-decoration: none;
+  font-weight: bold;
+}
+#flits_list li div.flit_message_container div.time_ago {
+  color: #9C9C9C;
+  font-size: 90%;
+  padding-top: 3px;
+}
+
+#char_count {
+  float: right; 
+  font-size: 23px, 
+  font-weight: bold !important; 
+  color: #aaa;
+}
+
+.dark_red {
+  color: #5C0002 !important;
+}
+.red {
+  color: #D40D12 !important;
+}
+
+#side_content_container{
+  margin-top: 15px;
+}
+#side_content_container h4{
+  margin: 2px 0px;
+}
+
+#search_bar {
+  margin-top: 15px;
+  height: 25px;
+  width: 160px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border: 1px solid #999999;
+}
+
+#search_bar input.text{
+  float: left;
+  width: 125px;
+  border: 0px;
+  height: 23px;
+  font-size: 15px;
+  line-height: 22px;
+  padding-left: 3px;
+  padding-top: 2px;
+  background-color: transparent;
+}
+#search_bar #search_submit_button {
+  background: url(/assets/nav_search_submit.png) 0 0 no-repeat;
+  border-left: 1px solid #999;
+  float: right;
+  width: 28px;
+  height: 25px;
+}
+#search_bar #search_submit_button:hover {
+  background-position: 0 -25px;
+  cursor: pointer;
 }
